crates/libs/frieze-macros/tests/ui/rename_variant_collision.stderr
error: frieze: variant `Inactive` renames to "Active" via `#[serde(rename = "...")]`, which conflicts with variant `Active` (also renames to "Active" via the Rust identifier). Each variant must have a unique wire name.
 --> tests/ui/rename_variant_collision.rs:9:5
  |
9 |     Inactive,
  |     ^^^^^^^^

warning: unreachable pattern
 --> tests/ui/rename_variant_collision.rs:8:22
  |
7 |     Active,
  |     ------ matches all the relevant values
8 |     #[serde(rename = "Active")]
  |                      ^^^^^^^^ no value can reach this
  |
  = note: `#[warn(unreachable_patterns)]` (part of `#[warn(unused)]`) on by default
